dinoco_tests/tests/dinoco/ui/fail/type_safe_update_wrong_projection.stderr
error[E0277]: the trait bound `Team: Projection<User>` is not satisfied
  --> tests/dinoco/ui/fail/type_safe_update_wrong_projection.rs:10:115
   |
10 |         update::<User>().cond(|x| x.id.eq(1_i64)).values(User { id: 1, name: "Updated".to_string() }).returning::<Team>();
   |                                                                                                       ---------   ^^^^ unsatisfied trait bound
   |                                                                                                       |
   |                                                                                                       required by a bound introduced by this call
   |
help: the trait `Projection<User>` is not implemented for `Team`
      but trait `Projection<Team>` is implemented for it
  --> tests/dinoco/ui/fail/../common.rs
   |
   | impl Projection<Team> for Team {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `Team`, found `User`
note: required by a bound in `Update::<M>::returning`
  --> $WORKSPACE/dinoco/src/methods/update.rs
   |
   |     pub fn returning<S>(self) -> UpdateReturning<M, S>
   |            --------- required by a bound in this associated function
...
   |         S: Projection<M>,
   |            ^^^^^^^^^^^^^ required by this bound in `Update::<M>::returning`
